--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
     ]
   },
   "keywords": [],
@@ -25,11 +28,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-class-property": "^1.1.0",
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
