--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "set node_env=production&&webpack"
   },
   "babel": {
     "presets": [
@@ -43,6 +44,7 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.11.0"
   }
